--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,12 @@ a:hover{
     font-size: 2.5em;
     display: flex;
     justify-content: center;
+    
 }
 
-#facebook{
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+.sm-links{
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-bottom: 1vw;
 }
 
-#instagram{
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-}
