--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,32 @@ body{
 }
 
 #app{
-    margin-top: 6vw;
-    padding-top: 150px;
+    margin-top: 4vw;
+    padding-top: 190px;
     font-family: Helvetica, sans-serif;
-    font-size: 12vw;
+    font-size: 13vw;
     text-align: center;
     color: #444444;
+    /* new code here:  */
+    
 }
 
 #footer{
     width: 100%;
-    height: 100px;
+    height: 53px;
     text-align: center;
+    /* new code here:  */
+    position: absolute;
+    bottom: 0;
+}
+
+#links{
+    /* padding-top: 8vw;
+    margin-top: 100px; */
+    color: #444444;
+    font-size: 2.5em;
+    display: flex;
+    justify-content: center;
     
 }
 
@@ -40,15 +54,7 @@ a:hover{
     text-decoration: none;
 }
 
-#links{
-    padding-top: 8vw;
-    margin-top: 100px;
-    color: #444444;
-    font-size: 2.5em;
-    display: flex;
-    justify-content: center;
-    
-}
+
 
 .sm-links{
     margin-left: 1vw;
