--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,101 @@
 body{
     background-color: #f3f3f3;
+    margin: 0;
+    padding: 0;
+    /* background-image: url("ep_cover_bg5.jpg"); */
+    background-size: cover;
+    background-repeat: repeat-x;
+    display: flex;
+    flex-direction: column;
 }
 
-#app{
+@media only screen and (max-width: 600px) {
+    body {
+      background-size: auto;
+      
+    }
+  }
+
+#container{
+    min-height: 100%;
+    margin-bottom: -45px;
+}
+
+
+
+.timer{
+    order: 1;
     margin-top: 4vw;
     padding-top: 190px;
     font-family: Helvetica, sans-serif;
     font-size: 13vw;
     text-align: center;
     color: #444444;
-    /* new code here:  */
-    
+}
+
+#push{
+    height: 50px;
+}
+
+
+.text{
+    order: 1;
+    margin-top: 10vw;
+    padding-top: 190px;
+    transform: scale();
+    font-family: Helvetica, sans-serif;
+    font-size: 7vw;
+    text-align: center;
+    color: #444444;
 }
 
 #footer{
+    order: 4;
     width: 100%;
-    height: 53px;
+    height: 45px;
     text-align: center;
     /* new code here:  */
-    position: absolute;
-    bottom: 0;
+    /* position: absolute;
+    bottom: 0; */
+}
+
+.video-responsive{
+    order: 3;
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    margin-top: 4vw;
+    margin-bottom: -4vw;
+}
+@media only screen and (max-width: 600px) {
+    .video-responsive {
+      margin-top: 50vw;
+    }
+  }
+
+iframe{
+    width: 80vw;
+    height: 45vw;
+}
+.video_hidden{
+    order: 3;
+    display: none;
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.hidden{
+    margin-top: 10vw;
+    padding-top: 190px;
+    transform: scale();
+    font-family: Helvetica, sans-serif;
+    font-size: 7vw;
+    text-align: center;
+    color: #444444;
+    display: none;
 }
 
 #links{
@@ -29,6 +105,7 @@ body{
     font-size: 2.5em;
     display: flex;
     justify-content: center;
+    margin-top: 4vw;
     
 }
 
@@ -37,6 +114,7 @@ a{
 }
 
 #logo{
+    order: 2;
     display: flex;
     justify-content: center;
 }
@@ -50,7 +128,7 @@ a:visited{
     text-decoration: none;
 }
 a:hover{
-    color: #666666;
+    color: #f3f3f3;
     text-decoration: none;
 }
 
@@ -59,6 +137,5 @@ a:hover{
 .sm-links{
     margin-left: 1vw;
     margin-right: 1vw;
-    margin-bottom: 1vw;
 }
 
